Fixed z-index of background image map

--- a/app/assets/sass/style.scss
+++ b/app/assets/sass/style.scss
@@ -25,8 +25,7 @@ body {
     left: 0;
     height: 100%;
     width:100%;
-    z-index:-1;
-    opacity:1;
+    z-index:0;
 }
 
 .header-text {
